--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@ body{
 .tartalom{
     background-color: rgba(135, 206, 235, 0.2);
 }
+.bekezdes{
+    font-size: 105%;
+}
 h2, h4{
     text-decoration: underline;
 }
