--- a/css/pandora.css
+++ b/css/pandora.css
@@ -6,10 +6,14 @@ body{
 .tartalom{
     background-color: rgba(135, 206, 235, 0.2);
 }
-h2{
+h2, h1{
     text-decoration: underline;
 }
 #kep{
     width: 50%;
     margin-bottom: 20px;
+}
+h1{
+    font-variant: small-caps;
+    margin-top: 20px;
 }
